--- a/content/Q&A.html
+++ b/content/Q&A.html
@@ -133,9 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">參考資料 << <a href='參考資料.html'>Previous</a> <a href='動態網站.html'>Next</a> >> 動態網站<br /><h1>研究生考試</h1>
-<p>csme 研究生考試科目與題型: <a href="http://csme.org.tw/Certification/College.aspx?AwardID=62">考試內容</a>及<a href="http://csme.org.tw/Certification/Prepare.aspx?NewsType=2">考古題</a></p>
-<br />參考資料 << <a href='參考資料.html'>Previous</a> <a href='動態網站.html'>Next</a> >> 動態網站</div>
+    <div id="tipue_search_content">CMSiMDE << <a href='CMSiMDE.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>Q&A</h1>
+<p><a href="/content/CMSiMDE.html">cmsimde</a></p><br />CMSiMDE << <a href='CMSiMDE.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
         
     <!-- footer -->
       <div class="container">
