--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1103,9 +1103,9 @@ print (result)
         
         print ('ep '+ str(episode_number) + ': game finished, reward:' +str(reward)+ outstring )</pre>
 <h4>訓練結果</h4>
-<p>紅點是每局的獎勵總和，藍色是累積獎勵平均值。橫軸：訓練局數；縱軸獎勵分數。</p>
-<p><img caption="false" height="500" src="/images/pong2_41k.png" width="667"/></p>
-<h2>Markov</h2>
+<p>點是每局的獎勵總和，曲線是累積獎勵平均值。橫軸：訓練局數；縱軸獎勵分數。紅點是pong1.2，綠點是pong2。(圖1.)</p>
+<p style="text-align: center;"><img alt="" height="450" src="/images/pong2_vs_pong1.2.png" style="display: block; margin-left: auto; margin-right: auto;" width="600"/>圖1.pong2 v.s. pong1.2</p>
+<p></p><h2>Markov</h2>
 <h4>Markov Chain</h4>
 <p>當前決策只會影響下個狀態，當前狀態轉移(action)到其他狀態的機率有所差異。</p>
 <h4>Markov Reward Process</h4>
@@ -1709,9 +1709,10 @@ train_neural_network(input_image)</pre>
 </ol>
 <p style="text-align: center;"><img alt="圖2.進階系統設定" caption="false" height="300" src="/images/Q_ffmpeg-2.png" width="278"/><br/>圖2.進階系統設定<br/><img caption="false" height="300" src="/images/Q_ffmpeg-3.png" style="display: block; margin-left: auto; margin-right: auto;" width="326"/>圖3.環境變數<br/><img caption="false" height="300" src="/images/Q_ffmpeg-4.png" style="display: block; margin-left: auto; margin-right: auto;" width="324"/>圖4.編輯環境變數</p>
 <ul>
-<li style="text-align: left;">測試<br/>開啟命令字元(win+R，輸入"cmd")，執行"ffmpeg"(圖5.)<br/><img alt="" height="300" src="/images/Q_ffmpeg-5.png" width="575"/></li>
+<li>測試<br/>開啟命令字元(win+R，輸入"cmd")，執行"ffmpeg"(圖5.)</li>
 </ul>
+<p><img alt="" height="300" src="/images/Q_ffmpeg-5.png" style="display: block; margin-left: auto; margin-right: auto;" width="575"/></p>
 <p style="text-align: center;">圖5.ffmpeg成功執行</p>
-<div id="gtx-trans" style="position: absolute; left: 39px; top: 1750.38px;">
+<div id="gtx-trans" style="position: absolute; left: -2px; top: 1776.38px;">
 <div class="gtx-trans-icon"></div>
 </div>
