update website content

--- a/config/content.htm
+++ b/config/content.htm
@@ -1680,8 +1680,8 @@ train_neural_network(input_image)</pre>
 <p><a href="https://github.com/puikinsh/travelify">https://github.com/puikinsh/travelify</a></p>
 <p></p>
 <h1>Q&amp;A</h1>
-<p><a href="/content/CMSiMDE.html">cmsimde</a></p>
-<p><a href="/content/FFMPEG.html">ffmpeg</a></p><h2>cmsimde</h2>
+<p><a href="http://mde.tw/4072pj1/content/MathJax.html">MathJax</a></p>
+<p><a href="http://mde.tw/4072pj1/content/ffmpeg.html">ffmpeg</a></p><h2>MathJax</h2>
 <p>Q：啟用cmsimde的MathJax的功能遇到文章使用括號補充說明的內容被誤當成latex的語法轉換。</p>
 <p>A：格式轉換原始定義成"("和")"，所以出現誤換的問題</p>
 <p>原程式：</p>
@@ -1699,7 +1699,9 @@ train_neural_network(input_image)</pre>
   };
   &lt;/script&gt;
   &lt;script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"&gt;&lt;/script&gt; </pre>
-<h2>ffmpeg</h2>
+<div id="gtx-trans" style="position: absolute; left: 56px; top: 62.375px;">
+<div class="gtx-trans-icon"></div>
+</div><h2>ffmpeg</h2>
 <p>Q：錄製訓練過程的程式讀不到ffmpeg。</p>
 <p><img alt="" height="200" src="/images/Q_ffmpeg.png" width="696"/></p>
 <p style="text-align: center;">圖1.程式讀不到ffmpeg</p>
