--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1104,7 +1104,8 @@ print (result)
         print ('ep '+ str(episode_number) + ': game finished, reward:' +str(reward)+ outstring )</pre>
 <h4>訓練結果</h4>
 <p>點是每局的獎勵總和，曲線是累積獎勵平均值。橫軸：訓練局數；縱軸獎勵分數。紅點是pong1.2，綠點是pong2。(圖1.)</p>
-<p style="text-align: center;"><img alt="" height="450" src="/images/pong2_vs_pong1.2.png" style="display: block; margin-left: auto; margin-right: auto;" width="600"/>圖1.pong2 v.s. pong1.2</p>
+<p style="text-align: center;"><img alt="" height="450" src="/images/pong2_vs_pong1.2.png" style="display: block; margin-left: auto; margin-right: auto;" width="600"/>圖1. pong2 v.s. pong1.2</p>
+<p style="text-align: right;">[<a href="/downloads/pong2_vs_pong1.2.pdf">pong2_vs_pong1.2.pdf</a>]</p>
 <p></p><h2>Markov</h2>
 <h4>Markov Chain</h4>
 <p>當前決策只會影響下個狀態，當前狀態轉移(action)到其他狀態的機率有所差異。</p>
@@ -1679,8 +1680,11 @@ train_neural_network(input_image)</pre>
 <p><a href="https://github.com/puikinsh/travelify">https://github.com/puikinsh/travelify</a></p>
 <p></p>
 <h1>Q&amp;A</h1>
-<p><a href="/content/CMSiMDE.html">cmsimde</a></p>
-<p><a href="/content/FFMPEG.html">ffmpeg</a></p><h2>cmsimde</h2>
+<p><a href="http://mde.tw/4072pj1/content/CMSiMDE.html">cmsimde</a></p>
+<p><a href="http://mde.tw/4072pj1/content/ffmpeg.html">ffmpeg</a></p>
+<div id="gtx-trans" style="position: absolute; left: -36px; top: 52.4792px;">
+<div class="gtx-trans-icon"></div>
+</div><h2>MathJax</h2>
 <p>Q：啟用cmsimde的MathJax的功能遇到文章使用括號補充說明的內容被誤當成latex的語法轉換。</p>
 <p>A：格式轉換原始定義成"("和")"，所以出現誤換的問題</p>
 <p>原程式：</p>
@@ -1698,7 +1702,9 @@ train_neural_network(input_image)</pre>
   };
   &lt;/script&gt;
   &lt;script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"&gt;&lt;/script&gt; </pre>
-<h2>ffmpeg</h2>
+<div id="gtx-trans" style="position: absolute; left: 56px; top: 62.375px;">
+<div class="gtx-trans-icon"></div>
+</div><h2>ffmpeg</h2>
 <p>Q：錄製訓練過程的程式讀不到ffmpeg。</p>
 <p><img alt="" height="200" src="/images/Q_ffmpeg.png" width="696"/></p>
 <p style="text-align: center;">圖1.程式讀不到ffmpeg</p>
