update website content

--- a/config/content.htm
+++ b/config/content.htm
@@ -1106,7 +1106,8 @@ print (result)
 <p>點是每局的獎勵總和，曲線是累積獎勵平均值。橫軸：訓練局數；縱軸獎勵分數。紅點是pong1.2，綠點是pong2。(圖1.)</p>
 <p style="text-align: center;"><img alt="" height="450" src="/images/pong2_vs_pong1.2.png" style="display: block; margin-left: auto; margin-right: auto;" width="600"/>圖1. pong2 v.s. pong1.2</p>
 <p style="text-align: right;">[<a href="/downloads/pong2_vs_pong1.2.pdf">pong2_vs_pong1.2.pdf</a>]</p>
-<p></p><h2>Markov</h2>
+<p></p>
+<h2>Markov</h2>
 <h4>Markov Chain</h4>
 <p>當前決策只會影響下個狀態，當前狀態轉移(action)到其他狀態的機率有所差異。</p>
 <h4>Markov Reward Process</h4>
@@ -1681,7 +1682,8 @@ train_neural_network(input_image)</pre>
 <p></p>
 <h1>Q&amp;A</h1>
 <p><a href="http://mde.tw/4072pj1/content/MathJax.html">MathJax</a></p>
-<p><a href="http://mde.tw/4072pj1/content/ffmpeg.html">ffmpeg</a></p><h2>MathJax</h2>
+<p><a href="http://mde.tw/4072pj1/content/ffmpeg.html">ffmpeg</a></p>
+<h2>MathJax</h2>
 <p>Q：啟用cmsimde的MathJax的功能遇到文章使用括號補充說明的內容被誤當成latex的語法轉換。</p>
 <p>A：格式轉換原始定義成"("和")"，所以出現誤換的問題</p>
 <p>原程式：</p>
@@ -1699,9 +1701,7 @@ train_neural_network(input_image)</pre>
   };
   &lt;/script&gt;
   &lt;script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"&gt;&lt;/script&gt; </pre>
-<div id="gtx-trans" style="position: absolute; left: 56px; top: 62.375px;">
-<div class="gtx-trans-icon"></div>
-</div><h2>ffmpeg</h2>
+<h2>ffmpeg</h2>
 <p>Q：錄製訓練過程的程式讀不到ffmpeg。</p>
 <p><img alt="" height="200" src="/images/Q_ffmpeg.png" width="696"/></p>
 <p style="text-align: center;">圖1.程式讀不到ffmpeg</p>
@@ -1716,6 +1716,6 @@ train_neural_network(input_image)</pre>
 </ul>
 <p><img alt="" height="300" src="/images/Q_ffmpeg-5.png" style="display: block; margin-left: auto; margin-right: auto;" width="575"/></p>
 <p style="text-align: center;">圖5.ffmpeg成功執行</p>
-<div id="gtx-trans" style="position: absolute; left: -2px; top: 1776.38px;">
+<div id="gtx-trans" style="position: absolute; left: -32px; top: 364.042px;">
 <div class="gtx-trans-icon"></div>
 </div>
