--- a/content/MathJax.html
+++ b/content/MathJax.html
@@ -151,9 +151,7 @@ img.add_border {
   };
   &lt;/script&gt;
   &lt;script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"&gt;&lt;/script&gt; </pre>
-<div id="gtx-trans" style="position: absolute; left: 56px; top: 62.375px;">
-<div class="gtx-trans-icon"></div>
-</div><br />Q&A << <a href='Q&A.html'>Previous</a> <a href='ffmpeg.html'>Next</a> >> ffmpeg</div>
+<br />Q&A << <a href='Q&A.html'>Previous</a> <a href='ffmpeg.html'>Next</a> >> ffmpeg</div>
         
     <!-- footer -->
       <div class="container">
