--- a/content/參考範例.html
+++ b/content/參考範例.html
@@ -323,7 +323,8 @@ img.add_border {
 <p>點是每局的獎勵總和，曲線是累積獎勵平均值。橫軸：訓練局數；縱軸獎勵分數。紅點是pong1.2，綠點是pong2。(圖1.)</p>
 <p style="text-align: center;"><img alt="" height="450" src="./../images/pong2_vs_pong1.2.png" style="display: block; margin-left: auto; margin-right: auto;" width="600"/>圖1. pong2 v.s. pong1.2</p>
 <p style="text-align: right;">[<a href="./../downloads/pong2_vs_pong1.2.pdf">pong2_vs_pong1.2.pdf</a>]</p>
-<p></p><br />neural_network_in_python.pdf << <a href='neural_network_in_python.pdf.html'>Previous</a> <a href='Markov.html'>Next</a> >> Markov</div>
+<p></p>
+<br />neural_network_in_python.pdf << <a href='neural_network_in_python.pdf.html'>Previous</a> <a href='Markov.html'>Next</a> >> Markov</div>
         
     <!-- footer -->
       <div class="container">
