--- a/content/Q&A.html
+++ b/content/Q&A.html
@@ -135,7 +135,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">CMSiMDE << <a href='CMSiMDE.html'>Previous</a> <a href='MathJax.html'>Next</a> >> MathJax<br /><h1>Q&A</h1>
 <p><a href="http://mde.tw/4072pj1/content/MathJax.html">MathJax</a></p>
-<p><a href="http://mde.tw/4072pj1/content/ffmpeg.html">ffmpeg</a></p><br />CMSiMDE << <a href='CMSiMDE.html'>Previous</a> <a href='MathJax.html'>Next</a> >> MathJax</div>
+<p><a href="http://mde.tw/4072pj1/content/ffmpeg.html">ffmpeg</a></p>
+<br />CMSiMDE << <a href='CMSiMDE.html'>Previous</a> <a href='MathJax.html'>Next</a> >> MathJax</div>
         
     <!-- footer -->
       <div class="container">
