--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1701,7 +1701,7 @@ train_neural_network(input_image)</pre>
   };
   &lt;/script&gt;
   &lt;script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"&gt;&lt;/script&gt; </pre>
-<p>ffmpeg</p>
+<h2>ffmpeg</h2>
 <p>Q：錄製訓練過程的程式讀不到ffmpeg。</p>
 <p><img alt="" height="200" src="/images/Q_ffmpeg.png" width="696"/></p>
 <p style="text-align: center;">圖1.程式讀不到ffmpeg</p>
@@ -1716,6 +1716,4 @@ train_neural_network(input_image)</pre>
 </ul>
 <p><img alt="" height="300" src="/images/Q_ffmpeg-5.png" style="display: block; margin-left: auto; margin-right: auto;" width="575"/></p>
 <p style="text-align: center;">圖5.ffmpeg成功執行</p>
-<div id="gtx-trans" style="position: absolute; left: -14px; top: 35769.1px;">
-<div class="gtx-trans-icon"></div>
-</div>
+<h2 style="text-align: left;">動態連結庫</h2>
