--- a/content/ffmpeg.html
+++ b/content/ffmpeg.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='專題定位.html'>專題定位</a><li><a href='LaTeX.html'>LaTeX</a><li><a href='參考資料.html'>參考資料</a><li><a href='研究生考試.html'>研究生考試</a></li></ul><li class='has-children'><a href='動態網站.html'>動態網站</a><ul class='dropdown'><li><a href='數位簽章.html'>數位簽章</a><li><a href='機電控制.html'>機電控制</a><li><a href='iRobot Create.html'>iRobot Create</a></li></ul><li class='has-children'><a href='深度學習.html'>深度學習</a><ul class='dropdown'><li><a href='電腦.html'>電腦</a><li><a href='Flask.html'>Flask</a></li></ul><li class='has-children'><a href='強化學習.html'>強化學習</a><ul class='dropdown'><li><a href='2021.html'>2021</a><li><a href='Reference.html'>Reference</a><li class='has-children'><a href='類神經網路學習.html'>類神經網路學習</a><ul class='dropdown'><li><a href='neural_network_in_python.pdf.html'>neural_network_in_python.pdf</a></li></ul><li><a href='參考範例.html'>參考範例</a><li class='has-children'><a href='Markov.html'>Markov</a><ul class='dropdown'><li><a href='Markov Decision Process.html'>Markov Decision Process</a></li></li></ul></ul><li class='has-children'><a href='優化器.html'>優化器</a><ul class='dropdown'><li><a href='Gradient Descent Optimizer.html'>Gradient Descent Optimizer</a><li><a href='Stochastic gradient descent.html'>Stochastic gradient descent</a><li><a href='Gradient descent optimization algorithms.html'>Gradient descent optimization algorithms</a></li></ul><li class='has-children'><a href='程式.html'>程式</a><ul class='dropdown'><li><a href='RL-Pong Game.html'>RL-Pong Game</a></li></ul><li class='has-children'><a href='Ref.html'>Ref</a><ul class='dropdown'><li><a href='Flutter.html'>Flutter</a><li><a href='CMSiMDE.html'>CMSiMDE</a></li></ul><li class='has-children'><a href='Q&A.html'>Q&A</a><ul class='dropdown'><li><a href='MathJax.html'>MathJax</a><li><a href='ffmpeg.html'>ffmpeg</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='專題定位.html'>專題定位</a><li><a href='LaTeX.html'>LaTeX</a><li><a href='參考資料.html'>參考資料</a><li><a href='研究生考試.html'>研究生考試</a></li></ul><li class='has-children'><a href='動態網站.html'>動態網站</a><ul class='dropdown'><li><a href='數位簽章.html'>數位簽章</a><li><a href='機電控制.html'>機電控制</a><li><a href='iRobot Create.html'>iRobot Create</a></li></ul><li class='has-children'><a href='深度學習.html'>深度學習</a><ul class='dropdown'><li><a href='電腦.html'>電腦</a><li><a href='Flask.html'>Flask</a></li></ul><li class='has-children'><a href='強化學習.html'>強化學習</a><ul class='dropdown'><li><a href='2021.html'>2021</a><li><a href='Reference.html'>Reference</a><li class='has-children'><a href='類神經網路學習.html'>類神經網路學習</a><ul class='dropdown'><li><a href='neural_network_in_python.pdf.html'>neural_network_in_python.pdf</a></li></ul><li><a href='參考範例.html'>參考範例</a><li class='has-children'><a href='Markov.html'>Markov</a><ul class='dropdown'><li><a href='Markov Decision Process.html'>Markov Decision Process</a></li></li></ul></ul><li class='has-children'><a href='優化器.html'>優化器</a><ul class='dropdown'><li><a href='Gradient Descent Optimizer.html'>Gradient Descent Optimizer</a><li><a href='Stochastic gradient descent.html'>Stochastic gradient descent</a><li><a href='Gradient descent optimization algorithms.html'>Gradient descent optimization algorithms</a></li></ul><li class='has-children'><a href='程式.html'>程式</a><ul class='dropdown'><li><a href='RL-Pong Game.html'>RL-Pong Game</a></li></ul><li class='has-children'><a href='Ref.html'>Ref</a><ul class='dropdown'><li><a href='Flutter.html'>Flutter</a><li><a href='CMSiMDE.html'>CMSiMDE</a></li></ul><li class='has-children'><a href='Q&A.html'>Q&A</a><ul class='dropdown'><li><a href='MathJax.html'>MathJax</a><li><a href='ffmpeg.html'>ffmpeg</a><li><a href='動態連結庫.html'>動態連結庫</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">MathJax << <a href='MathJax.html'>Previous</a> <br /><h1>ffmpeg</h1>
+    <div id="tipue_search_content">MathJax << <a href='MathJax.html'>Previous</a> <a href='動態連結庫.html'>Next</a> >> 動態連結庫<br /><h1>ffmpeg</h1>
 <p>Q：錄製訓練過程的程式讀不到ffmpeg。</p>
 <p><img alt="" height="200" src="./../images/Q_ffmpeg.png" width="696"/></p>
 <p style="text-align: center;">圖1.程式讀不到ffmpeg</p>
@@ -148,9 +148,7 @@ img.add_border {
 </ul>
 <p><img alt="" height="300" src="./../images/Q_ffmpeg-5.png" style="display: block; margin-left: auto; margin-right: auto;" width="575"/></p>
 <p style="text-align: center;">圖5.ffmpeg成功執行</p>
-<div id="gtx-trans" style="position: absolute; left: -32px; top: 364.042px;">
-<div class="gtx-trans-icon"></div>
-</div><br />MathJax << <a href='MathJax.html'>Previous</a> </div>
+<br />MathJax << <a href='MathJax.html'>Previous</a> <a href='動態連結庫.html'>Next</a> >> 動態連結庫</div>
         
     <!-- footer -->
       <div class="container">
