add training files

--- a/config/content.htm
+++ b/config/content.htm
@@ -1683,7 +1683,7 @@ train_neural_network(input_image)</pre>
 <h1>Q&amp;A</h1>
 <p><a href="http://mde.tw/4072pj1/content/MathJax.html">MathJax</a></p>
 <p><a href="http://mde.tw/4072pj1/content/ffmpeg.html">ffmpeg</a></p>
-<h2>MathJax</h2>
+<p><a href="http://mde.tw/4072pj1/content/%E5%8B%95%E6%85%8B%E9%80%A3%E7%B5%90%E5%BA%AB.html">dll</a></p><h2>MathJax</h2>
 <p>Q：啟用cmsimde的MathJax的功能遇到文章使用括號補充說明的內容被誤當成latex的語法轉換。</p>
 <p>A：格式轉換原始定義成"("和")"，所以出現誤換的問題</p>
 <p>原程式：</p>
