--- a/content/Q&A.html
+++ b/content/Q&A.html
@@ -136,7 +136,7 @@ img.add_border {
     <div id="tipue_search_content">CMSiMDE << <a href='CMSiMDE.html'>Previous</a> <a href='MathJax.html'>Next</a> >> MathJax<br /><h1>Q&A</h1>
 <p><a href="http://mde.tw/4072pj1/content/MathJax.html">MathJax</a></p>
 <p><a href="http://mde.tw/4072pj1/content/ffmpeg.html">ffmpeg</a></p>
-<br />CMSiMDE << <a href='CMSiMDE.html'>Previous</a> <a href='MathJax.html'>Next</a> >> MathJax</div>
+<p><a href="http://mde.tw/4072pj1/content/%E5%8B%95%E6%85%8B%E9%80%A3%E7%B5%90%E5%BA%AB.html">dll</a></p><br />CMSiMDE << <a href='CMSiMDE.html'>Previous</a> <a href='MathJax.html'>Next</a> >> MathJax</div>
         
     <!-- footer -->
       <div class="container">
