--- a/content/Reinforcement Learning Basics.html
+++ b/content/Reinforcement Learning Basics.html
@@ -133,15 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">2021 << <a href='2021.html'>Previous</a> <a href='類神經網路學習.html'>Next</a> >> 類神經網路學習<br /><h1>Reference</h1>
-<p><a href="./../downloads/2018_Robotic Harvesting of Fruiting Vegetables-A Simulation Approach in V-REP, ROS and MATLAB.pdf">2018_Robotic Harvesting of Fruiting Vegetables-A Simulation Approach in V-REP, ROS and MATLAB.pdf</a></p>
-<p><a href="./../downloads/2019_Hovering Control of a Quadrotor.pdf">2019_Hovering Control of a Quadrotor.pdf</a></p>
-<p><a href="./../downloads/2019_Accelerating Training of Deep Reinforcement Learning-based Autonomous Driving Agents Through Comparative Study of Agent and Environment Designs.pdf">2019_Accelerating Training of Deep Reinforcement Learning-based Autonomous Driving Agents Through Comparative Study of Agent and Environment Designs.pdf</a></p>
-<p><a href="./../downloads/2018_Curved Path Following with Deep Reinforcement Learning-Results from Three Vessel Models.pdf">2018_Curved Path Following with Deep Reinforcement Learning-Results from Three Vessel Models.pdf</a></p>
-<p><a href="./../downloads/2019_Application of deep reinforcement learning for control problems.pdf">2019_Application of deep reinforcement learning for control problems.pdf</a></p>
-<p><a href="./../downloads/2018_Path Following in Simulated Environments using the A3C Reinforcement Learning Method.pdf">2018_Path Following in Simulated Environments using the A3C Reinforcement Learning Method.pdf</a></p>
-<p><a href="./../downloads/FlashRL_A Reinforcement Learning Platform.pdf">FlashRL_A Reinforcement Learning Platform.pdf</a></p>
-<br />2021 << <a href='2021.html'>Previous</a> <a href='類神經網路學習.html'>Next</a> >> 類神經網路學習</div>
+    <div id="tipue_search_content">Markov Decision Process << <a href='Markov Decision Process.html'>Previous</a> <a href='優化器.html'>Next</a> >> 優化器<br /><h1>Reinforcement Learning Basics</h1>
+<p><span></span></p>
+<br />Markov Decision Process << <a href='Markov Decision Process.html'>Previous</a> <a href='優化器.html'>Next</a> >> 優化器</div>
         
     <!-- footer -->
       <div class="container">
