--- a/config/content.htm
+++ b/config/content.htm
@@ -1678,7 +1678,7 @@ def train_neural_network(input_image):
 
 train_neural_network(input_image)</pre>
 <h2>Pong control</h2>
-<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">""" Majority of this code was copied directly from Andrej Karpathy's gist:
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">""" Majority of this code was copied directly from Andrej Karpathy's gist:
 https://gist.github.com/karpathy/a4166c7fe253700972fcbc77e4ea32c5
 # https://raw.githubusercontent.com/omkarv/pong-from-pixels/master/pong-from-pixels.py
 
