--- a/content/Pong control.html
+++ b/content/Pong control.html
@@ -134,7 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">RL-Pong Game << <a href='RL-Pong Game.html'>Previous</a> <a href='Ref.html'>Next</a> >> Ref<br /><h1>Pong control</h1>
-<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">""" Majority of this code was copied directly from Andrej Karpathy's gist:
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">""" Majority of this code was copied directly from Andrej Karpathy's gist:
 https://gist.github.com/karpathy/a4166c7fe253700972fcbc77e4ea32c5
 # https://raw.githubusercontent.com/omkarv/pong-from-pixels/master/pong-from-pixels.py
 
