--- a/config/content.htm
+++ b/config/content.htm
@@ -1,15 +1,14 @@
 <h1>About</h1>
 <p>專題題目: </p>
-<p>強化學習在機電系統設計與控制中之應用 </p>
-<p>Application of reinforcement learning in design and control of mechatronic systems</p>
+<p>強化學習在機電系統設計中之應用</p>
+<p>Application of reinforcement learning in mechatronic systems</p>
 <p>討論區: <a href="https://github.com/mdecourse/4072pj1/discussions">https://github.com/mdecourse/4072pj1/discussions</a></p>
 <p>組員:</p>
 <p style="padding-left: 30px;">40723110</p>
 <p style="padding-left: 30px;">40723115</p>
 <p style="padding-left: 30px;">40723138</p>
 <p style="padding-left: 30px;">40723148</p>
-<p style="padding-left: 30px;">40723150</p>
-<h2>專題定位</h2>
+<p style="padding-left: 30px;">40723150</p><h2>專題定位</h2>
 <p>2021/01/08</p>
 <p style="padding-left: 30px;">Adagrad: <a href="/downloads/2011_Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.pdf">2011_Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.pdf</a></p>
 <p style="padding-left: 30px;"><a href="/downloads/2012_ADADELTA AN ADAPTIVE LEARNING RATE METHOD.pdf">2012_ADADELTA AN ADAPTIVE LEARNING RATE METHOD.pdf</a></p>
