--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,15 +1,14 @@
 <h1>About</h1>
 <p>專題題目: </p>
-<p>強化學習在機電系統設計與控制中之應用 </p>
-<p>Application of reinforcement learning in design and control of mechatronic systems</p>
+<p>強化學習在機電系統設計中之應用</p>
+<p>Application of reinforcement learning in design of mechatronic systems</p>
 <p>討論區: <a href="https://github.com/mdecourse/4072pj1/discussions">https://github.com/mdecourse/4072pj1/discussions</a></p>
 <p>組員:</p>
 <p style="padding-left: 30px;">40723110</p>
 <p style="padding-left: 30px;">40723115</p>
 <p style="padding-left: 30px;">40723138</p>
 <p style="padding-left: 30px;">40723148</p>
-<p style="padding-left: 30px;">40723150</p>
-<h2>專題定位</h2>
+<p style="padding-left: 30px;">40723150</p><h2>專題定位</h2>
 <p>2021/01/08</p>
 <p style="padding-left: 30px;">Adagrad: <a href="/downloads/2011_Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.pdf">2011_Adaptive Subgradient Methods for Online Learning and Stochastic Optimization.pdf</a></p>
 <p style="padding-left: 30px;"><a href="/downloads/2012_ADADELTA AN ADAPTIVE LEARNING RATE METHOD.pdf">2012_ADADELTA AN ADAPTIVE LEARNING RATE METHOD.pdf</a></p>
@@ -1437,6 +1436,7 @@ params = params − learning_rate ∗ params_grad
 <p><a href="https://github.com/mdecourse/4072pj1/tree/master/40723150/pygame">https://github.com/mdecourse/4072pj1/tree/master/40723150/pygame</a></p>
 <p>Pong control</p>
 <p>將pong1.2訓練好的模型丟回到gym，讓訓練好的模型和gmy內建AI對打。</p>
+<p>目前訓練結果平均值不會超過15分。</p>
 <p></p><h2>RL-Pong Game</h2>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">import pygame
 import random , sys
