--- a/content/index.html
+++ b/content/index.html
@@ -102,14 +102,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>強化學習在機電系統設計與控制中之應用 </h1>
+                <h1>強化學習在機電系統中之應用</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">強化學習在機電系統設計與控制中之應用 </a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">強化學習在機電系統中之應用</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -135,16 +135,15 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='專題定位.html'>Next</a> >> 專題定位<br /><h1>About</h1>
 <p>專題題目: </p>
-<p>強化學習在機電系統設計與控制中之應用 </p>
-<p>Application of reinforcement learning in design and control of mechatronic systems</p>
+<p>強化學習在機電系統設計中之應用</p>
+<p>Application of reinforcement learning in mechatronic systems</p>
 <p>討論區: <a href="https://github.com/mdecourse/4072pj1/discussions">https://github.com/mdecourse/4072pj1/discussions</a></p>
 <p>組員:</p>
 <p style="padding-left: 30px;">40723110</p>
 <p style="padding-left: 30px;">40723115</p>
 <p style="padding-left: 30px;">40723138</p>
 <p style="padding-left: 30px;">40723148</p>
-<p style="padding-left: 30px;">40723150</p>
-<br /> <a href='專題定位.html'>Next</a> >> 專題定位</div>
+<p style="padding-left: 30px;">40723150</p><br /> <a href='專題定位.html'>Next</a> >> 專題定位</div>
         
     <!-- footer -->
       <div class="container">
