add address in website

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,7 +1,7 @@
 <h1>About</h1>
 <p>專題題目: </p>
 <p>強化學習在機電系統設計中之應用</p>
-<p>Application of reinforcement learning in design of mechatronic systems</p>
+<p>Application of reinforcement learning in mechatronic systems</p>
 <p>討論區: <a href="https://github.com/mdecourse/4072pj1/discussions">https://github.com/mdecourse/4072pj1/discussions</a></p>
 <p>組員:</p>
 <p style="padding-left: 30px;">40723110</p>
