--- a/content/Pong control.html
+++ b/content/Pong control.html
@@ -218,7 +218,8 @@ while True:
   if reward != 0:
     print (('round %d game finished, reward: %f' % (episode_number, reward)) + ('' if reward == -1 else ' !!!!!!!!'))</pre>
 <p></p>
-<p></p><br />RL-Pong Game << <a href='RL-Pong Game.html'>Previous</a> <a href='Ref.html'>Next</a> >> Ref</div>
+<p></p>
+<br />RL-Pong Game << <a href='RL-Pong Game.html'>Previous</a> <a href='Ref.html'>Next</a> >> Ref</div>
         
     <!-- footer -->
       <div class="container">
