--- a/content/參考範例.html
+++ b/content/參考範例.html
@@ -333,7 +333,8 @@ img.add_border {
 <p style="text-align: right;">[<a href="./../downloads/pong2_vs_pong1.2.pdf">pong2_vs_pong1.2.pdf</a>]</p>
 <p style="text-align: left;"><img caption="false" height="500" src="./../images/pong1_vs_pong1.2_reward.png" width="667"/></p>
 <p style="text-align: left;"></p>
-<p></p><br />neural_network_in_python.pdf << <a href='neural_network_in_python.pdf.html'>Previous</a> <a href='Markov.html'>Next</a> >> Markov</div>
+<p></p>
+<br />neural_network_in_python.pdf << <a href='neural_network_in_python.pdf.html'>Previous</a> <a href='Markov.html'>Next</a> >> Markov</div>
         
     <!-- footer -->
       <div class="container">
