--- a/content/深度學習.html
+++ b/content/深度學習.html
@@ -153,7 +153,7 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VMp6pq6_QjI" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/MlFZjLkEIEw" width="560"></iframe></p>
 <p>以下為 convnet javascript 應用</p>
-<!-- import convnetjs library -->
+<p><a href='/"https:/github.com/mdecourse/4072pj1/blob/master/LaTeX%E5%A0%B1%E5%91%8A/4072pj1.pdf&lt;/a'><!-- import convnetjs library -->
 <script src="./../downloads/convnet-min.js"></script>
 <!-- javascript goes here -->
 <script type="text/javascript">
@@ -176,6 +176,7 @@ function start() {
 <script>
 window.onload=start();
 </script>
+</a></p>
 <br />iRobot Create << <a href='iRobot Create.html'>Previous</a> <a href='電腦.html'>Next</a> >> 電腦</div>
         
     <!-- footer -->
