--- a/content/程式.html
+++ b/content/程式.html
@@ -141,7 +141,8 @@ img.add_border {
 <p>Pong control</p>
 <p>將pong1.2訓練好的模型丟回到gym，讓訓練好的模型和gmy內建AI對打。</p>
 <p>目前訓練結果平均值不會超過15分。</p>
-<p></p><br />Gradient descent optimization algorithms << <a href='Gradient descent optimization algorithms.html'>Previous</a> <a href='RL-Pong Game.html'>Next</a> >> RL-Pong Game</div>
+<p></p>
+<br />Gradient descent optimization algorithms << <a href='Gradient descent optimization algorithms.html'>Previous</a> <a href='RL-Pong Game.html'>Next</a> >> RL-Pong Game</div>
         
     <!-- footer -->
       <div class="container">
